[tool.poetry]
name = "fantasyscouter"
version = "0.1.0"
description = "Fantasy football chatbot server"
authors = ["Sreeniketh Madgula <sreeniketh.madgula@gmail.com>"]
readme = "README.md"
packages = [{ include = "fantasyscouter" }]

[tool.poetry.dependencies]
python = ">=3.13"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = { extras = ["standard"], version = ">=0.35.0,<0.36.0" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
